# TalentForge

./: README.md
.github/workflows/: auth-service-lint.yml  auth-service-test.yml  auth-service-typecheck.yml
auth-service/: .env.example  .env.test  .pre-commit-config.yaml  Dockerfile  Makefile  PRODUCTION.md  README.md  alembic.ini  docker-compose.yml  main.py  plan.md  pyproject.toml  sanity_test.sh
auth-service/.github/workflows/: ci.yml  lint.yml  test.yml  typecheck.yml
auth-service/alembic/: env.py
auth-service/alembic/versions/: 25f41e3ab2e0_create_fresh_users_table_with_roles.py  2a5fa5b29f1c_drop_username_column_from_users.py  3e759522590d_create_users_table.py  6d2852f9a56e_create_users_table.py
auth-service/app/: main.py
auth-service/app/api/v1/: __init__.py  admin.py  auth.py  health.py  users.py
auth-service/app/api/v1/admin/: __init__.py  docs.py  router.py  schemas.py
auth-service/app/api/v1/auth/: __init__.py  docs.py  router.py  schemas.py
auth-service/app/api/v1/health/: __init__.py  docs.py  router.py  schemas.py  utils.py
auth-service/app/api/v1/users/: __init__.py  docs.py  router.py  schemas.py
auth-service/app/core/: config.py  hashing.py  jwt.py  middleware.py  permissions.py  rate_limiter.py  rbac.py  redis_cache.py  security.py
auth-service/app/db/: base.py  crud.py  models.py  schemas.py  session.py
auth-service/app/services/: token_blacklist.py
auth-service/app/tests/: conftest.py
auth-service/app/tests/e2e/: test_health_e2e.py
auth-service/app/tests/integration/: test_auth_sanity.py  test_health_endpoints.py  test_jwt_refresh.py
auth-service/app/tests/unit/: test_hashing.py  test_health.py  test_user_model.py  test_users.py
auth-service/app/utils/: response.py
auth-service/infra/: Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml
